# pallet-farcaster_frame

./: Cargo.toml  LICENSE  README.md  build.rs  package-lock.json
protobufs/schemas/: message.proto  username_proof.proto
src/: lib.rs  message.rs  mock.rs  pallet_farcaster.rs  test.rs  tests.rs  util.rs
