[package]
name = "pallet-farcaster_frame"
version = "0.0.3"
description = "Farcaster frame pallet to parse messages from farcaster frames."
license-file = "LICENSE"
homepage = "https://github.com/Shritesh99/pallet-farcaster_frame"
repository = "https://github.com/Shritesh99/pallet-farcaster_frame/"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# frame deps
frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.0.0", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = [
  "derive", "max-encoded-len"
] }
scale-info = { version = "2.11.1", default-features = false, features = [
  "derive"
] }

sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }

prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-types = { version = "0.13", default-features = false }

[dev-dependencies]
base64 = "0.22.1"
hex-literal = "0.4.1"

[build-dependencies]
prost-build = "0.13"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
