[package]
name = "pallet-farcaster_frame"
version = "0.1.0"
description = "Farcaster frame pallet to parse messages from farcaster frames."
license-file = "LICENSE"
homepage = "https://github.com/Shritesh99/pallet-farcaster_frame"
repository = "https://github.com/Shritesh99/pallet-farcaster_frame/"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# frame deps
parity-scale-codec = { version = "3.7.4", default-features = false, features = [
  "derive", "max-encoded-len"
] }
scale-info = { version = "2.11.1", default-features = false, features = [
  "derive"
] }

sp-std = { version = "14.0.0", default-features = false }

[dev-dependencies]
base64 = "0.22.1"
hex-literal = "0.4.1"

[build-dependencies]
ppsc-build = "0.2.2"

[features]
default = ["std"]
std = []
